2011-05-23 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_agents.php: cleaned source code style.

2011-05-23  Sergio Martin <sergio.martin@artica.es>

	* images/cog_db.png
	images/cross_undo.png
	godmode/agentes/module_manager_editor.php: Added two new images to
	queue and added check when relink a module into policy avoiding it 
	when te policy is applying

2011-05-23  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Added hidden field
	in module edition form to keep the type when is disabled

2011-05-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/header.php: Added close tag in the autorefresh html link.

	Fixes: #3305092

2011-05-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/oracle.php
	include/functions_agents.php
	include/functions_db.php
	include/functions_alerts.php
	pandoradb.oracle.sql
	pandoradb.data.oracle.sql
	godmode/alerts/configure_alert_compound.php
	godmode/alerts/configure_alert_template.php
	godmode/snmpconsole/snmp_alert.php
	godmode/users/configure_user.php
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.php: Several corrections 
	over Console code for Oracle support. 

2011-05-19  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/alerts_status.php 
	include/functions_agents.php: Fixed filter Status in Alert Detail and pagination.

2011-05-18 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php: changed the source code to fixed the
	enterprise call in function "agents_get_agents".

	* operation/agentes/estado_agente.php: apply the change to the call
	"agents_get_agents".
	
	Fixes: #3303426

2011-05-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	operation/events/events.php: Changed the way to include flash
	graph include. 
	* pandoradb.oracle.sql: Changed datatype on max_value field of 
	talert_templates table.